# appframe

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
appframe/: __init__.py  application.py  command.py  log.py  main.py  singleton.py
application-directory/: index.html
docs/: index.md
docs/js/: autoexpand.js
js/: consentinit.js
search/: search_index.json
test-app/: __main__.py
test-app/commands/: greet.py  run.py
test-app/features/: test1.py  test2.py
