[metadata]
name = appframe
description = A Python Application Development Framework
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/webplane/appframe
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    appframe = appframe.__main__:main
